# Jvm

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  ReadMe.md  format.sh  test.sh
.github/workflows/: build.yaml
common/: CMakeLists.txt
common/include/classloader/: attributehelper.h  attributeloader.h  classfile.h  classfileloader.h  classloader.h  constantparser.h  fieldpoolloader.h  interfaceparser.h  methodparser.h  primitivereader.h  targetinfo.h  utf8utils.h
common/include/classpool/: classpool.h
common/include/interpreter/: instructionhelper.h  stackframe.h
common/include/memory/: garbagecollector.h  memory.h  objheader.h  primitive_array.h  static.h
common/include/stack/: stack.h
common/include/synthetic/: class_creator.h
common/include/utils/: arraylistutils.h  arrayutils.h  classpathhelper.h  constantpoolhelper.h
common/src/classloader/: attributehelper.c  attributeloader.c  classfileloader.c  classfileparser.c  classloader.c  constantparser.c  fieldpoolloader.c  interfaceparser.c  methodparser.c  primitivereader.c  utf8utils.c
common/src/classpool/: classpool.c
common/src/heap/: heap.c
common/src/interpreter/: instructionhelper.c  stackframe.c
common/src/memory/: garbagecollector.c  memory.c  objheader.c  primitive_array.c  static.c
common/src/stack/: stack.c
common/src/synthetic/: class_creator.c
common/src/utils/: arraylistutils.c  arrayutils.c  classpathhelper.c  constantpoolhelper.c
include/classloader/: attributehelper.h  attributeloader.h  classfile.h  classfileloader.h  classloader.h  codeattributehelper.h  constantparser.h  fieldpoolloader.h  interfaceparser.h  methodparser.h  primitivereader.h  utf8utils.h
include/classpool/: classpool.h
include/execution_engine/: executor.h
include/interpreter/: instructionhelper.h  stackframe.h
include/memory/: garbagecollector.h  memory.h  objheader.h
include/stack/: stack.h
include/utils/: arraylistutils.h  arrayutils.h  constantpoolhelper.h
integration_tests/: README.md
integration_tests/parser_tests/: CMakeLists.txt
javaparser/: CMakeLists.txt
javaparser/include/: javaparser.h
javaparser/src/: javaparser.c  main.c
javarunner/: CMakeLists.txt
javarunner/include/: native.h  stdlib_native.h
javarunner/src/: javarunner.c  native.c  stdlib_native.c
src/classloader/: attributehelper.c  attributeloader.c  classfileloader.c  classfileparser.c  classloader.c  codeattributehelper.c  constantparser.c  (+5 more)
stdlib/: CMakeLists.txt
stdlib/src/main/java/java/io/: PrintStream.java
stdlib/src/main/java/java/lang/: CharSequence.java  Comparable.java  Object.java  String.java  StringBuilder.java  System.java
stdlib/src/main/java/java/lang/annotation/: ElementType.java  Retention.java  RetentionPolicy.java  Target.java
stdlib_native/: CMakeLists.txt
test_projects/: gradle.properties  settings.gradle.kts
testjavasrc/: Adder.java  Averager.java  ComplexClass.java  Fibonacci.java  Main.java
(+32 files in other folders)
